[package]
name = "floky"
version = "0.2.2"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version="0.16", features = ["extension-module"] }
lsh-rs = {path = "../lsh-rs", features=["blas"]}
blas-src = { version = "0.8", defeault-features = false, features = ["openblas"]}
# static linking as we may not link to ibopenblas.so for the manylinux standard.
# See pep 513: https://www.python.org/dev/peps/pep-0513/#external-shared-libraries
openblas-src = { version = "0.10", default-features = false, features = ["cblas", "static"]}
thiserror = "1.0.13"
numpy = "0.16"
ndarray = {version = "0.15", features=["blas", "rayon"]}

[lib]
name = "floky"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-dist = ["tqdm~=4.40.0", "scipy", "numpy"]

[profile.release]
lto = true
