[package]
name = "lsh-rs"
version = "0.4.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2021"
license = "MIT"
description = "LSH: Approximate Nearest Neighbor Search with Locality Sensitive Hashing."
repository = "https://github.com/ritchie46/lsh-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
workspace = []
# also add blas in ndarray. See Cargo.toml of bench for that.
blas = ["blas-src", "ndarray/blas"]
sqlite = ["rusqlite"]
default = ["sqlite"]

[dependencies]
ndarray = {version = "0.15", features=["serde", "rayon"]}
blas-src = { version = "0.8", defeault-features = false, optional = true}
rand = {version = "^0.8", features = ["small_rng"]}
rand_distr = "^0.4"
fnv = "^1.0.6"
ndarray-rand = "^0.14"
bincode = "^1.2.1"
serde = { version = "^1.0.104", features = ["derive"] }
statrs = "^0.15"
rayon = "^1.3"
rusqlite = {version = "^0.27", features = ["bundled", "backup"], optional = true }
thiserror = "1.0.13"
anyhow = "^1.0.27"
itertools = "^0.10"
num = "^0.4"


[lib]
name = "lsh_rs"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
