[package]
name = "neural-network"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsh-rs = {path = "../../lsh-rs", features=["blas"]}
blas-src = { version = "0.8", defeault-features = false, features = ["openblas"]}
ndarray = {version = "0.15", features=["blas", "rayon"]}
ndarray-rand = "0.14.0"
fnv = "1.0.6"
mnist = "0.5.0"
rand = "0.8"
minifb = "0.23"
rayon = "1.3"
